--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
   </head>
   <style>
     nav {
+      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -19,7 +20,7 @@
       display: flex;
       list-style: none;
       margin: 0;
-      padding: 0;
+      padding: 20px 0;
     }
 
     li {
@@ -29,6 +30,9 @@
     a {
       color: #fff;
       text-decoration: none;
+    }
+    button {
+      display: none;
     }
 
     @media (max-width: 600px) {
@@ -41,15 +45,33 @@
       li {
         margin: 10px 0;
       }
+      button {
+        position: absolute;
+        padding: 10px;
+        margin: 15px;
+        right: 0;
+        display: block;
+      }
+    }
+
+    img {
+      margin: 20px auto;
+      border: 1px solid black;
+      border-width: 10px 30px 20px 100px;
+      border-color: green;
+      /* box-shadow: 2px -10px 2px black; */
     }
   </style>
   <body>
     <nav>
+      <button>tog</button>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </nav>
+
+    <img src="../0GlobalImage/cloud-removebg-preview.png" alt="" />
   </body>
 </html>
